# pokedex-rust-grpc-sample

./: .env.example  Cargo.toml  LICENSE  README.md  build.rs
migrations/2020-04-16-000446_create_pokemons/: down.sql  up.sql
proto/: pokedex.proto
src/: client.rs  main.rs  server.rs
src/db/: mod.rs  models.rs  schema.rs
src/domain/: mod.rs
src/errors/: app_error.rs  mod.rs
src/pokedexpb/: mod.rs
