[package]
name = "pokedex-rust"
version = "0.1.0"
authors = ["KV <kumaran.venkataraman@shopify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pokedex-server"
path = "src/server.rs"

[[bin]]
name = "pokedex-client"
path = "src/client.rs"

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.2"
