[package]
name = "pokedex-rust"
version = "0.1.0"
authors = ["KV <kumaran.v.ram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

[build-dependencies]
tonic-build = "0.2"
